# AudioViz

./: .gitignore  README.md  main.py  pixi.toml  pyproject.toml  realtime.py  reaper_setup.md  run_spectrogram.py
docs/: ripple-necessary-conditions.drawio  shader-roadmap.md
outputs/: audio_devices.json
scripts/: benchmark_ripple_renderers.py  note_circle_viz.py  pose_graph_demo.py  validate_audio_ripple_mapping.py  validate_pose_ripple_render.py
scripts/scales/: main.py  utils.py
src/audioviz/: __init__.py  audiovisualiser.py  engine.py  realtime.py  source_controls.py  utils.py
src/audioviz/audio_processing/: audio_processor.py
src/audioviz/physics/: __init__.py  opengl_wave_propagator.py  wave_propagator.py
src/audioviz/sources/: __init__.py
src/audioviz/sources/pose/: __init__.py  adjacency.py  base.py  grid_mapping.py  (+2 more)
src/audioviz/utils/: audio_devices.py  signal_processing.py
src/audioviz/visualization/: offline_audio_ripple.py  offline_pose_ripple.py  pitch_helix_visualizer.py  ripple_control_panel.py  ripple_renderers.py  ripple_wave_visualizer.py  spectrogram_visualizer.py  visualizer_base.py
src/circle/: main.py
tests/: conftest.py  test_audio_processor.py  test_input_stream.py  test_offline_audio_ripple.py  test_offline_pose_ripple.py  test_pose_coupled_medium.py  test_pose_frame_buffer.py  test_pose_graph_state.py  test_pose_grid_mapping.py  test_pose_ripple_visualizer.py  test_read_live_audio.py  test_ripple_control_panel.py  test_ripple_engine_performance.py  test_ripple_renderers.py  test_source_controls.py  test_wave_propagator.py
